# strawlab_freeflight_experiments

./: .gitignore  CMakeLists.txt  Makefile  blackpost_rad025.osg  fakecorr.py  mainpage.dox  manifest.xml  package.xml  regcorr.py  rosdep.yaml  setup.py
cmake/Modules/: FindOsgCompute.cmake
data/: 5circles_v1.svg.osg  5circles_v2.svg.osg  L.osgt  StimulusAltitudeEdge.osg  blackpost_rad02.osg  check_16_rad05.osg  checkerboard.png.osg  checkerboard_post05r.osg  checkerboardl.png.osg  checkerboardr.png.osg  cylinder_blak.osgt  cylinder_white.osgt  debug_osg1.xcf  debug_transparent1.osg  fish_bowl.blend  fish_bowl.osgt  fish_bowl_ico_6.blend  fish_bowl_ico_6.osgt  fish_bowl_ico_6_post.blend  fish_bowl_ico_6_post.osgt  fish_bowl_ico_6_post_p.osgt  fish_icosphere_6_test.osgt  fish_post.blend  fish_post.osgt  fish_post_no_camera.osgt  fish_post_test.blend  invisible_rad02.osg  justpost1.osg  justpost2.osg  justpost3.osg  justpostcheck1.osg  justpostgrey1.osg  kitchen_flat.osgt  lboxmed.svg.osg  lboxmed8x1.osg  midgray.osg  noposts.osg  post.osg  posts2.osg  posts3.osg  (+14 more)
data/conditions/: abina_stimulus.yaml  abina_stimulus_2.yaml  combined_stimulus.yaml  confinement.yaml  confinement_buffer.yaml  confinement_fish_post.yaml  confinement_multi.yaml  conflict.yaml  debug_invisible_w_osg.yaml  debug_invisible_w_osg2.yaml  elisa1.yaml  elisa2.yaml  elisa3.yaml  elisa4.yaml  elisa5.yaml  elisa6.yaml  fish_bowl_nat-stim_movie.yaml  fish_bowl_virtpost.yaml  fish_bowl_virtpost_movie.yaml  freq_osc_0.6  freq_osc_06.yaml  infinity_and_post2.yaml  infinity_and_post4.yaml  infinity_and_posts.yaml  invisible_test_02_04.yaml  invisible_test_02_04_black.yaml  just_middle_black  lisa_stimulus.yaml  middle_post_black_02_04.yaml  mpb01_flipp_smolpost.yaml  mpb02_flipp_rad02.yaml  mpb04_flipp.yaml  mpb04_flipy_flipperturb.yaml  optimalcontrol.yaml  osc_test.yaml  osc_test_02_04.yaml  osc_test_02_08.yaml  perturb_post.yaml  perturbation.yaml  perturbation_15hz.yaml  (+24 more)
data/idinput/: idinput_WHAT_sine_3_0_10_1.8____1.npy  idinput_prbs_3_0_0.05_0.9____1.npy  idinput_prbs_3_0_0.10_0.9____1.npy  idinput_prbs_3_0_0.15_0.3____1.npy  idinput_prbs_3_0_0.15_0.45____1.npy  idinput_prbs_3_0_0.15_0.4____1.npy  idinput_prbs_3_0_0.15_0.5____1.npy  idinput_prbs_3_0_0.15_0.6____1.npy  idinput_prbs_3_0_0.15_0.7____1.npy  idinput_prbs_3_0_0.15_0.8____1.npy  idinput_prbs_3_0_0.15_0.9____1.npy  idinput_prbs_3_0_0.15_1.8____1.npy  idinput_prbs_3_0_0.1_1.8____1.npy  idinput_prbs_3_0_0.20_0.9____1.npy  idinput_prbs_3_0_0.25_0.9____1.npy  idinput_prbs_3_0_0.2_1.8____1.npy  idinput_prbs_3_0_0.5_0.9____1.npy  idinput_sine_3_0_10_1.8____1.freqs.npy  idinput_sine_3_0_2_1.4_3_20_1_10.npy  idinput_sine_3_0_5_0.7____1.npy  idinput_sine_3_0_5_1.8____1.freqs.npy  idinput_sine_3_0_5_1.8____1.npy  idinput_sine_3_0_6_1.8____1.freqs.npy  (+7 more)
docs/: conf.py  example_cmdline.py  example_colorline_plot.py  example_full_manual_to_df.py  example_prog.py  example_trial_df.py  example_trial_iterate.py  example_two.py  index.rst
launch/: cylinder_and_model_test.launch  cylinder_grating_test.launch  cylinder_test.launch  demo_StimulusCylinderGrating.launch  demo_StimulusCylinderGratings.launch  demo_StimulusPlanarGrating.launch  osg_file_test.launch  starfield_cuda_debug_view.launch  starfield_cuda_post_test.launch  starfield_post_test.launch  starfield_test.launch
msg/: CylinderGratingInfo.msg  CylinderMaskedGratingInfo.msg
nodes/: combi_script_flycube.py  combined_stimulus.py  confinement  confinement-lag  confinement.py  confinement_fish_post.py  confinement_plain.py  confinement_plain.py~  confinement_plain_flycube.py  confinement_svg  confinement_svg.py  conflict.py  conflict_latencyadd.py  fish_post.py  fish_post_min.py  fishtrax_dark_bright.py  fixation.py  fixation_monitor.py  flydra2ros  followpath  followpath.py  followpath_monitor  followpath_monitor.py  mareike_altitude_edge_node  mareike_altitude_starfield_node  mareike_altitude_starfield_node2  mouseexp.py  optimalcontrol.py  optotune  osgsaver.py  perturbation.py  perturbation_flycube.py  rotation  rotation.py  rotation_fishtrax.py  rotation_fishtrax.py~  rotation_fishtrax_old.py  rotation_flycube.py  show_osgfile.py  sinewave_fish.py  (+22 more)
scripts/: .gitignore  add_uuid_to_h5.py  altitude_test  analysis_max.py  combine_fish_post.py  confinement-analysis-lag.py  confinement-analysis.py  confinement-analysis1.py  conflict-analysis.py  dark_bright-analysis.py  export-dataframes.py  fixataion-analysis-start-condition.py  flyflypath-analysis-control-const-screen.py  followpath-analysis.py  followpath-confinement-analysis.py  followpath-movie.py  meta-filter-analysis.py  osg-trajectory-renderer.py  perturbation-analysis.py  perturbation-compare.py  remove-old-analysis.py  rotation-analysis-flycube.py  rotation-analysis-zoom.py  rotation-analysis.py  rotation-control-analysis.py  sid-analysis.py  sid-model-compare.py  spa-model-compare.py  spectral-analysis.py  spectral-compare.py  starfield-confinement-analysis.py  starfield_test  tone-analysis.py  tone-compare.py  trajectory-viewer.py  translation-analysis-fast.py  translation-analysis-reperror.py  translation-analysis-reperror_2.py  translation-analysis-timelimited.py  translation-analysis.py
src/: PtclKernels.cu  StimulusAltitudeEdge.cpp  StimulusCUDAStarFieldAndModel.cpp  StimulusCylinder.cpp  StimulusCylinderAndModel.cpp  StimulusCylinderGrating.cpp  StimulusCylinderMaskedGrating.cpp  StimulusFear.cpp  StimulusOSGFile.cpp  StimulusOSGFileVirtualEnvironment.cpp  StimulusStarField.cpp  StimulusStarFieldAndModel.cpp  StimulusStarFieldAndPost.cpp  base64.cpp  base64.h  json2osg.cpp  json2osg.hpp  make_osg_corridor.py  setup.py
src/flydata/: log.py  (+1 more)
test/: 20131004_161625.tar.bz2  test_args.py  test_combine.py  test_combine_api.py  test_combine_fake.py  test_combine_filters.py  test_conditions.py  test_correlation.py  test_curvature.py  test_datastore.py  test_features.py  test_fixes.py  test_log.py  test_movies.sh  test_path.py  test_permissions.py  test_perturb.py  test_plot.py  test_scripts.py  test_series.py  test_starfield_and_model.py
(+255 files in other folders)
