<package format="2">
  <name>strawlab_freeflight_experiments</name>
  <maintainer email="strawman@astraw.com">Andrew Straw</maintainer>
  <version>0.1.0</version>
  <description>strawlab_freeflight_experiments</description>
  <license>unknown</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>


  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>freemovr_engine</depend>
  <depend>rosmsg</depend>
  <depend>rosgobject</depend>
  <depend>ros_flydra</depend>
  <depend>flycave</depend>

</package>
